<resources>
    <string name="app_name">Pikmin Guide</string>

    <string name="menu_about">About...</string>
    <string name="menu_settings">Settings</string>
    <string name="about_title">About</string>
    <string name="about_message">App developed by Pedro León Siria.\nVersion 1.0</string>
    <string name="welcome_pesado">Welcome to the Pikmin World!</string>
    <string name="detail_title">Pikmin Detail</string>
    <string name="toast_selected">Selected Pikmin: %1$s</string>

    <string name="settings_title">Settings</string>
    <string name="language_label">Language (Spanish)</string>
    <string name="theme_label">Dark Mode</string>

    <string name="name_red">Red Pikmin</string>
    <string name="desc_red">Red Pikmin are characterized by their scarlet body and pointed nose. In addition to the vegetable features of their species, they present animal characteristics such as a strong fighting spirit and high curiosity. They are highly adaptable, being resistant to extreme heat and inhabiting a variety of ecosystems.</string>

    <string name="name_yellow">Yellow Pikmin</string>
    <string name="desc_yellow">This type of Pikmin is characterized by its yellow body and large ears that allow them to dig quickly and reach great heights when thrown. Another distinguishing feature is their body\'s ability to conduct electricity. They are not only resistant to it, but seem to enjoy it.</string>

    <string name="name_blue">Blue Pikmin</string>
    <string name="desc_blue">Blue Pikmin are characterized by their blue body and indecipherable facial expression. Unlike most radiambular species, which cannot breathe underwater, Blue Pikmin have gills that resemble a mouth. These gills allow them to survive in both aquatic and terrestrial ecosystems.</string>

    <string name="name_white">White Pikmin</string>
    <string name="desc_white">White Pikmin are characterized by their white body and red eyes. Their small bodies secrete a potent poison, which in turn makes them immune to certain poisons. White Pikmin seeds can be obtained from Ivory Candypop Buds found only in underground regions.</string>

    <string name="name_purple">Purple Pikmin</string>
    <string name="desc_purple">Purple Pikmin are characterized by their robust and sturdy body. They are stronger and larger than the rest of their species. They weigh 10 times more than any other Pikmin. Like White Pikmin, they can only be born from Candypop Buds found in underground regions, making them a unique species.</string>

    <string name="name_rock">Rock Pikmin</string>
    <string name="desc_rock">Rock Pikmin are a type of parasitic Pikmin called \"Hermikmin\" that takes a stone as a host. Similar to a seed rooting through cracks in a rock, the Pikmin\'s roots penetrate the stone.</string>

    <string name="name_winged">Winged Pikmin</string>
    <string name="desc_winged">Winged Pikmin are characterized by their pink body and prominent blue eyes that look like lenses. They move agilely through the air with their wings, but their attacks do not cause much damage.</string>

    <string name="name_ice">Ice Pikmin</string>
    <string name="desc_ice">Ice Pikmin belong to a parasitic subtype of Pikmin called \"Hermikmin\". They obtain and maintain their body through a process using their low-temperature core to constantly generate new ice from ambient humidity.</string>

    <string name="name_glow">Glow Pikmin</string>
    <string name="desc_glow">Glow Pikmin are characterized by their radiant green body. When the leaf on their head blooms, it takes a star shape. They have several distinguishing features, one being that instead of sprouting from Onions, they sprout from Lumiknolls found only at night and in underground regions.</string>
</resources>